CI: Set up conan on Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
   - set PATH=C:\Python34-x64;C:\Python34-x64\Scripts;%PATH%
 
   - pip install pipenv
-  - pipenv install
+  - pipenv install --deploy
 
   - git submodule update --init --recursive
 
@@ -22,6 +22,7 @@ before_build:
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - pipenv run scripts/build_deps.py windows
+  - pipenv run conan install . -s cppstd=14 --build=missing
 
 build_script:
   - cmake . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/win.cmake -DCOVERAGE=OFF -DPLATFORM=win -A x64
