--- a/.travis.yml
+++ b/.travis.yml
@@ -125,7 +125,7 @@ install:
 before_script:
   - pipenv run conan remote add -f bincrafters https://api.bintray.com/conan/bincrafters/public-conan
   - pipenv run conan remote add -f libnekit https://api.bintray.com/conan/zhuhaow/libnekit
-  - eval "pipenv run conan install . -if build/ $CONAN_CONFIG"
+  - eval "pipenv run conan install . -u -if build/ $CONAN_CONFIG"
 
 script:
   - set -e
