--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ before_build:
   # - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - pipenv run conan remote add -f bincrafters https://api.bintray.com/conan/bincrafters/public-conan
   - pipenv run conan remote add -f libnekit https://api.bintray.com/conan/zhuhaow/libnekit
-  - pipenv run conan install . -u -s cppstd=14 --build=missing
+  - pipenv run conan install . -u -s cppstd=14 --build=missing || pipenv run conan install . -u -s cppstd=14 --build
 
 build_script:
   - cmake . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/win.cmake -DCOVERAGE=OFF -DPLATFORM=win -A x64
