--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ osx_default: &osx_default
 ios_default: &ios_default
   os: osx
   language: objective-c
-  env: PLATFORM=ios CONAN_CONFIG="-s cppstd=14 --build=missing --profile=conan/ios_profile"
+  env: PLATFORM=ios CONAN_CONFIG="-s cppstd=14 --build=missing --profile=conan/ios_profile" CONAN_RUN_TESTS=0
 
 matrix:
   include:
