FEAT: Add Conan support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,9 @@ set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
 cmake_policy(SET CMP0063 NEW)
 add_library(nekit "")
 
-include(CheckCXXCompilerFlag)
-
 if (NOT WIN32)
+  include(CheckCXXCompilerFlag)
+
   # I can't get VS suppress warnings from thrid party libraries, tried CAExcludePath and IncludePath but got no luck.
   check_cxx_compiler_flag(-Wall HAS_WALL)
   target_compile_options(nekit PRIVATE $<$<BOOL:${HAS_WALL}>:-Wall>)
@@ -50,7 +50,6 @@ target_compile_options(nekit PRIVATE $<$<CONFIG:RELEASE>:-O3>)
 set(DEPENDENCY_ROOT "${PROJECT_SOURCE_DIR}/deps/${PLATFORM}")
 
 target_include_directories(nekit PUBLIC "include")
-target_include_directories(nekit PRIVATE "modules")
 
 if(WIN32)
   target_compile_definitions(nekit PUBLIC -DELPP_WINSOCK2 -DWIN32_LEAN_AND_MEAN)
@@ -58,7 +57,12 @@ endif()
 
 target_compile_definitions(nekit PUBLIC -DBOOST_ASIO_DISABLE_HANDLER_TYPE_REQUIREMENTS)
 
-target_sources(nekit PRIVATE
+file(GLOB_RECURSE HEADER_FILES "include/*.h")
+
+target_sources(nekit
+  PUBLIC
+  ${HEADER_FILES}
+  PRIVATE
   src/transport/tcp_socket.cc
   src/transport/tcp_listener.cc
   src/transport/tunnel.cc
@@ -95,7 +99,7 @@ target_sources(nekit PRIVATE
   src/data_flow/socks5_data_flow.cc
   src/data_flow/speed_data_flow.cc
   src/data_flow/tls_data_flow.cc
-  modules/http_parser/http_parser.c
+  src/third_party/http_parser/http_parser.c
   )
 
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/contrib" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/contrib" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/contrib/CMakeLists.txt")
@@ -107,6 +111,16 @@ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS NO_OUTPUT_DIRS)
 
 target_link_libraries(nekit CONAN_PKG::libmaxminddb CONAN_PKG::libsodium CONAN_PKG::OpenSSL CONAN_PKG::boost)
+
+install(TARGETS nekit
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  )
+
+install(DIRECTORY include
+  DESTINATION "."
+  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
 
 if (NOT IOS AND NOT ANDROID)
   enable_testing()
