CI: Update config for Sonar scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,13 @@ sonar.projectKey=me.zhuhaow.libnekit:dev
 sonar.organization=zhuhaow-github
 
 sonar.sources=.
-sonar.exclusions=deps/**, build/**, modules/**
+sonar.exclusions=build/**
 sonar.cfamily.build-wrapper-output=bw-output
-sonar.cfamily.gcov.reportsPath=coverage
+sonar.cfamily.gcov.reportsPath=.
+
+sonar.links.homepage=https://github.com/zhuhaow/libnekit
+sonar.links.ci=https://travis-ci.org/zhuhaow/libnekit
+sonar.links.scm=https://github.com/zhuhaow/libnekit
+sonar.links.issue=https://github.com/zhuhaow/libnekit/issues
 
 sonar.host.url=https://sonarcloud.io
