--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,3 @@
-linux: &linux
-   os: linux
-   sudo: required
-   language: python
-   python: "3.6"
-   services:
-     - docker
-
 cache:
   directories:
     - '$HOME/.sonar/cache'
@@ -44,7 +36,14 @@ osx: &osx
 ios_default: &ios
   os: osx
   language: objective-c
-  env: CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
+
+linux: &linux
+   os: linux
+   sudo: required
+   language: python
+   python: "3.6"
+   services:
+     - docker
 
 matrix:
   include:
@@ -66,19 +65,19 @@ matrix:
 
     - <<: *ios
       osx_image: xcode7.3
-      env: CONAN_APPLE_CLANG_VERSIONS=7.3 CONAN_BUILD=1
+      env: CONAN_APPLE_CLANG_VERSIONS=7.3 CONAN_BUILD=1 CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
     - <<: *ios
       osx_image: xcode8.3
-      env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_BUILD=1
+      env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
     - <<: *ios
       osx_image: xcode9
-      env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_BUILD=1
+      env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
     - <<: *ios
       osx_image: xcode9.3
-      env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_BUILD=1
+      env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
     - <<: *ios
       osx_image: xcode10
-      env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_BUILD=1
+      env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="`pwd`/conan/ios_profile" CONAN_RUN_TESTS=0
 
     - <<: *linux
       env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49 CONAN_BUILD=1
