CI: Fix the folder does not exist error

--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ install:
   - |
     if [[ "${CONAN_BUILD}" == 1 ]]; then
       chmod +x .travis/install.sh && ./.travis/install.sh
-      cp conan/ios ~/.conan/profiles/
+      mkdir -p ~/.conan/profiles/ && cp conan/ios ~/.conan/profiles
     else
       pip install --user pipenv urllib3[secure];
       pipenv install --deploy 
