CI: Specify correct arch for ios build

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,16 +49,16 @@ matrix:
 
     - <<: *ios
       osx_image: xcode8.3
-      env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0
+      env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0 CONAN_ARCHS="armv7"
     - <<: *ios
       osx_image: xcode9
-      env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0
+      env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0 CONAN_ARCHS="armv7"
     - <<: *ios
       osx_image: xcode9.3
-      env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0
+      env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0 CONAN_ARCHS="armv7"
     - <<: *ios
       osx_image: xcode10
-      env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0
+      env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0 CONAN_ARCHS="armv7"
 
     - <<: *linux
       env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49 CONAN_BUILD=1
