CI: Divide config combo into sub groups

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,79 @@ linux: &linux
 
 matrix:
   include:
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=lasote/conangcc5 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=lasote/conangcc5 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=lasote/conangcc5 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=lasote/conangcc5 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=lasote/conangcc8 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=lasote/conangcc8 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=lasote/conangcc8 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=lasote/conangcc8 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=5.0 CONAN_DOCKER_IMAGE=lasote/conanclang50 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=5.0 CONAN_DOCKER_IMAGE=lasote/conanclang50 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=5.0 CONAN_DOCKER_IMAGE=lasote/conanclang50 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=5.0 CONAN_DOCKER_IMAGE=lasote/conanclang50 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=lasote/conanclang60 CONAN_BUILD=1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=lasote/conanclang60 CONAN_BUILD=1 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=lasote/conanclang60 CONAN_BUILD=1 CONAN_CURRENT_PAGE=3 CONAN_TOTAL_PAGES=4
+    - <<: *linux
+      env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=lasote/conanclang60 CONAN_BUILD=1 CONAN_CURRENT_PAGE=4 CONAN_TOTAL_PAGES=4
+      
     - <<: *osx
       osx_image: xcode8.3
       env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_BUILD=1
@@ -60,23 +133,6 @@ matrix:
       osx_image: xcode10
       env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_BUILD=1 CONAN_BASE_PROFILE="ios" CONAN_RUN_TESTS=0 CONAN_ARCHS="armv7"
 
-    - <<: *linux
-      env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=lasote/conangcc5 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=lasote/conangcc6 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=lasote/conangcc8 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_CLANG_VERSIONS=5.0 CONAN_DOCKER_IMAGE=lasote/conanclang50 CONAN_BUILD=1
-    - <<: *linux
-      env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=lasote/conanclang60 CONAN_BUILD=1
-      
     - os: linux
       language: cpp
       env: GCC_VERSION=7 MATRIX_EVAL="CC=gcc-${GCC_VERSION} && CXX=g++-${GCC_VERSION}" COMPILE_PREFIX="build-wrapper-linux-x86-64 --out-dir bw-output" CONAN_CONFIG="-s cppstd=14 -s compiler.libcxx=libstdc++11 --build=gtest --build=missing" CONAN_CPU_COUNT=4
